Alert popover when deleting last group.

--- a/Roomie/Roomie/Base.lproj/Main.storyboard
+++ b/Roomie/Roomie/Base.lproj/Main.storyboard
@@ -343,6 +343,68 @@
             </objects>
             <point key="canvasLocation" x="3111.1999999999998" y="907.1964017991005"/>
         </scene>
+        <!--Pop Over View Controller-->
+        <scene sceneID="zES-An-hJ8">
+            <objects>
+                <viewController storyboardIdentifier="toPopUp" useStoryboardIdentifierAsRestorationIdentifier="YES" id="mYM-0h-VmK" customClass="PopOverViewController" customModule="Roomie" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="814-PF-cy5"/>
+                        <viewControllerLayoutGuide type="bottom" id="m03-kD-L12"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="D73-D1-u5b">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kR5-xl-JLa">
+                                <rect key="frame" x="87" y="193" width="200" height="280"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lte-OT-9Vv">
+                                        <rect key="frame" x="8" y="50" width="184" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qiy-wF-9b3">
+                                        <rect key="frame" x="0.0" y="230" width="200" height="50"/>
+                                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="xZK-5B-krK"/>
+                                        </constraints>
+                                        <state key="normal" title="Close">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="closeButtonTapped:" destination="mYM-0h-VmK" eventType="touchUpInside" id="Htr-Ma-raz"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="Lte-OT-9Vv" firstAttribute="top" secondItem="kR5-xl-JLa" secondAttribute="top" constant="50" id="ChH-2r-Mol"/>
+                                    <constraint firstAttribute="trailing" secondItem="Lte-OT-9Vv" secondAttribute="trailing" constant="8" id="Ren-r7-PR8"/>
+                                    <constraint firstAttribute="bottom" secondItem="qiy-wF-9b3" secondAttribute="bottom" id="l4k-GA-wG3"/>
+                                    <constraint firstAttribute="height" constant="280" id="nis-CB-IOl"/>
+                                    <constraint firstItem="Lte-OT-9Vv" firstAttribute="leading" secondItem="kR5-xl-JLa" secondAttribute="leading" constant="8" id="rZ8-xB-csh"/>
+                                    <constraint firstAttribute="trailing" secondItem="qiy-wF-9b3" secondAttribute="trailing" id="rZJ-jb-szV"/>
+                                    <constraint firstAttribute="width" constant="200" id="uIQ-LQ-ZC9"/>
+                                    <constraint firstItem="qiy-wF-9b3" firstAttribute="leading" secondItem="kR5-xl-JLa" secondAttribute="leading" id="w4O-EC-xR1"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="kR5-xl-JLa" firstAttribute="centerY" secondItem="D73-D1-u5b" secondAttribute="centerY" id="BAb-wh-oA1"/>
+                            <constraint firstItem="kR5-xl-JLa" firstAttribute="centerX" secondItem="D73-D1-u5b" secondAttribute="centerX" id="NVW-Cc-Mwk"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="popOverLabel" destination="Lte-OT-9Vv" id="Y3I-IG-1HZ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4at-Kb-gf0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2478" y="-438"/>
+        </scene>
         <!--tabBarController-->
         <scene sceneID="bDO-Pk-Jek">
             <objects>
