--- a/Roomie/Roomie/Settings.storyboard
+++ b/Roomie/Roomie/Settings.storyboard
@@ -6,6 +6,8 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -177,13 +179,13 @@ Contributors: Alex Aslett, Kaitlyn Barker, Johnathan Pham</string>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="avatar" translatesAutoresizingMaskIntoConstraints="NO" id="NXd-GF-bPg">
-                                <rect key="frame" x="137" y="94" width="100" height="100"/>
+                                <rect key="frame" x="122" y="94" width="131" height="131.5"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="100" id="gPC-RL-cxq"/>
+                                    <constraint firstAttribute="width" secondItem="NXd-GF-bPg" secondAttribute="height" multiplier="1:1" id="pDo-uO-omu"/>
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="cWf-qc-Qjs">
-                                <rect key="frame" x="137" y="224" width="200" height="150"/>
+                                <rect key="frame" x="137" y="253.5" width="200" height="150"/>
                                 <subviews>
                                     <textField opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ajj-g0-0qI" userLabel="First Name Textfield">
                                         <rect key="frame" x="0.0" y="0.0" width="200" height="30"/>
@@ -216,7 +218,7 @@ Contributors: Alex Aslett, Kaitlyn Barker, Johnathan Pham</string>
                                 </constraints>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="bottom" spacing="21" translatesAutoresizingMaskIntoConstraints="NO" id="dHp-TW-hVt">
-                                <rect key="frame" x="71" y="225" width="58" height="145"/>
+                                <rect key="frame" x="71" y="253.5" width="58" height="145"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="First: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vNd-lx-WFD">
                                         <rect key="frame" x="15.5" y="0.0" width="42.5" height="20.5"/>
@@ -251,13 +253,12 @@ Contributors: Alex Aslett, Kaitlyn Barker, Johnathan Pham</string>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="NXd-GF-bPg" firstAttribute="centerX" secondItem="3hP-dD-ZMa" secondAttribute="centerX" id="3I1-DI-vHk"/>
-                            <constraint firstItem="cWf-qc-Qjs" firstAttribute="top" secondItem="NXd-GF-bPg" secondAttribute="bottom" constant="30" id="AZv-jS-UV1"/>
-                            <constraint firstItem="dHp-TW-hVt" firstAttribute="top" secondItem="xvt-pB-kNJ" secondAttribute="bottom" constant="161" id="HeF-wK-HYF"/>
-                            <constraint firstItem="NXd-GF-bPg" firstAttribute="top" secondItem="xvt-pB-kNJ" secondAttribute="bottom" constant="30" id="Mlp-VO-fR3"/>
+                            <constraint firstItem="cWf-qc-Qjs" firstAttribute="top" secondItem="NXd-GF-bPg" secondAttribute="bottom" constant="28" id="FoK-3U-lhf"/>
+                            <constraint firstItem="NXd-GF-bPg" firstAttribute="top" secondItem="xvt-pB-kNJ" secondAttribute="bottom" constant="30" id="La3-BR-ZcD"/>
+                            <constraint firstItem="NXd-GF-bPg" firstAttribute="width" secondItem="3hP-dD-ZMa" secondAttribute="width" multiplier="0.35" id="dgz-U3-HRF"/>
+                            <constraint firstItem="dHp-TW-hVt" firstAttribute="top" secondItem="NXd-GF-bPg" secondAttribute="bottom" constant="28" id="drF-ww-YGL"/>
                             <constraint firstItem="cWf-qc-Qjs" firstAttribute="leading" secondItem="dHp-TW-hVt" secondAttribute="trailing" constant="8" id="hHE-xX-7iW"/>
-                            <constraint firstItem="NXd-GF-bPg" firstAttribute="leading" secondItem="3hP-dD-ZMa" secondAttribute="leading" constant="137" id="iBg-xa-WPm"/>
                             <constraint firstAttribute="trailing" secondItem="cWf-qc-Qjs" secondAttribute="trailing" constant="38" id="qmE-0t-qpy"/>
-                            <constraint firstAttribute="trailing" secondItem="NXd-GF-bPg" secondAttribute="trailing" constant="138" id="u82-yN-Dc3"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Profile" id="gbs-Ov-9HG">
@@ -410,14 +411,13 @@ Contributors: Alex Aslett, Kaitlyn Barker, Johnathan Pham</string>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="avatar" translatesAutoresizingMaskIntoConstraints="NO" id="1f4-bQ-sPd">
-                                <rect key="frame" x="137" y="94" width="100" height="100"/>
+                                <rect key="frame" x="121.5" y="84" width="131" height="131"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="100" id="8bk-FV-jiC"/>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="100" id="IAV-eb-0cg"/>
+                                    <constraint firstAttribute="width" secondItem="1f4-bQ-sPd" secondAttribute="height" multiplier="1:1" id="UWq-yo-Rjv"/>
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="adQ-jI-e62">
-                                <rect key="frame" x="137" y="224" width="200" height="150"/>
+                                <rect key="frame" x="134" y="246" width="200" height="150"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Dwm-KZ-1jh">
                                         <rect key="frame" x="0.0" y="0.0" width="200" height="30"/>
@@ -453,7 +453,7 @@ Contributors: Alex Aslett, Kaitlyn Barker, Johnathan Pham</string>
                                 </constraints>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="bottom" spacing="21" translatesAutoresizingMaskIntoConstraints="NO" id="mNi-qI-eii">
-                                <rect key="frame" x="71" y="225" width="58" height="145"/>
+                                <rect key="frame" x="61" y="246" width="58" height="145"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="First: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9xm-vp-x0i">
                                         <rect key="frame" x="15.5" y="0.0" width="42.5" height="20.5"/>
@@ -484,9 +484,8 @@ Contributors: Alex Aslett, Kaitlyn Barker, Johnathan Pham</string>
                                     <constraint firstAttribute="height" constant="145" id="rBS-QC-0GO"/>
                                 </constraints>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dqf-4c-p6h">
-                                <rect key="frame" x="127" y="193" width="137" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dqf-4c-p6h">
+                                <rect key="frame" x="119" y="215" width="137" height="30"/>
                                 <state key="normal" title="Select Profile Image"/>
                                 <connections>
                                     <action selector="selectImageButtonTapped:" destination="Nkn-zH-hZC" eventType="touchUpInside" id="els-C1-G2V"/>
@@ -495,14 +494,17 @@ Contributors: Alex Aslett, Kaitlyn Barker, Johnathan Pham</string>
                         </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="adQ-jI-e62" firstAttribute="top" secondItem="1f4-bQ-sPd" secondAttribute="bottom" constant="30" id="5d5-eR-VFc"/>
-                            <constraint firstItem="mNi-qI-eii" firstAttribute="top" secondItem="Htq-kS-rHs" secondAttribute="bottom" constant="161" id="9FM-SJ-2li"/>
-                            <constraint firstItem="1f4-bQ-sPd" firstAttribute="top" secondItem="Htq-kS-rHs" secondAttribute="bottom" constant="30" id="GZv-wd-nzr"/>
-                            <constraint firstItem="1f4-bQ-sPd" firstAttribute="leading" secondItem="jan-Lg-Tpc" secondAttribute="leading" constant="137" id="UAH-sn-pg2"/>
-                            <constraint firstItem="adQ-jI-e62" firstAttribute="leading" secondItem="mNi-qI-eii" secondAttribute="trailing" constant="8" id="pCe-8B-PUX"/>
-                            <constraint firstAttribute="trailing" secondItem="adQ-jI-e62" secondAttribute="trailing" constant="38" id="prF-kh-6HS"/>
-                            <constraint firstAttribute="trailing" secondItem="1f4-bQ-sPd" secondAttribute="trailing" constant="138" id="uA7-sa-K0N"/>
-                            <constraint firstItem="adQ-jI-e62" firstAttribute="leading" secondItem="mNi-qI-eii" secondAttribute="trailing" constant="8" id="wMv-YG-WmF"/>
+                            <constraint firstItem="mNi-qI-eii" firstAttribute="top" secondItem="1f4-bQ-sPd" secondAttribute="bottom" constant="31" id="88n-27-YMD"/>
+                            <constraint firstItem="1f4-bQ-sPd" firstAttribute="top" secondItem="Htq-kS-rHs" secondAttribute="bottom" constant="20" id="B09-35-LIn"/>
+                            <constraint firstItem="dqf-4c-p6h" firstAttribute="centerX" secondItem="jan-Lg-Tpc" secondAttribute="centerX" id="F9S-yb-Ogv"/>
+                            <constraint firstItem="adQ-jI-e62" firstAttribute="top" secondItem="1f4-bQ-sPd" secondAttribute="bottom" constant="31" id="Gau-S0-Vwl"/>
+                            <constraint firstItem="Dwm-KZ-1jh" firstAttribute="top" secondItem="dqf-4c-p6h" secondAttribute="bottom" constant="1" id="Gr5-nZ-Yhn"/>
+                            <constraint firstItem="mNi-qI-eii" firstAttribute="leading" secondItem="jan-Lg-Tpc" secondAttribute="leading" constant="61" id="N3Y-4B-KYO"/>
+                            <constraint firstItem="dqf-4c-p6h" firstAttribute="top" secondItem="1f4-bQ-sPd" secondAttribute="bottom" id="WuZ-LN-Okd"/>
+                            <constraint firstItem="1f4-bQ-sPd" firstAttribute="centerX" secondItem="jan-Lg-Tpc" secondAttribute="centerX" id="dp2-0b-kiP"/>
+                            <constraint firstItem="1f4-bQ-sPd" firstAttribute="width" secondItem="jan-Lg-Tpc" secondAttribute="width" multiplier="0.35" id="fXF-98-TZC"/>
+                            <constraint firstItem="adQ-jI-e62" firstAttribute="leading" secondItem="mNi-qI-eii" secondAttribute="trailing" constant="15" id="tpi-72-SSS"/>
+                            <constraint firstAttribute="trailing" secondItem="adQ-jI-e62" secondAttribute="trailing" constant="41" id="v8n-sY-9cf"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Edit Profile" id="WeM-tN-tm9">
@@ -523,7 +525,7 @@ Contributors: Alex Aslett, Kaitlyn Barker, Johnathan Pham</string>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="beq-c7-oZr" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="43x-pZ-BIP" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="2410" y="-156"/>
+            <point key="canvasLocation" x="2408.8000000000002" y="-156.07196401799101"/>
         </scene>
         <!--Settings-->
         <scene sceneID="1Li-dO-joi">
