--- a/Roomie/Roomie/Expense.storyboard
+++ b/Roomie/Roomie/Expense.storyboard
@@ -23,7 +23,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="67" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="cuC-WW-DVP">
-                                <rect key="frame" x="8" y="187" width="304" height="381"/>
+                                <rect key="frame" x="8" y="183" width="304" height="385"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="oweExpenseCell" rowHeight="67" id="5rA-nZ-un8" customClass="oweExpenseTableViewCell" customModule="Roomie" customModuleProvider="target">
@@ -204,18 +204,8 @@
                                     <outlet property="delegate" destination="Mdk-HO-Xy6" id="7xu-RH-oZp"/>
                                 </connections>
                             </tableView>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="MLi-yW-IM6">
-                                <rect key="frame" x="110.5" y="132" width="99" height="29"/>
-                                <segments>
-                                    <segment title="Owe"/>
-                                    <segment title="Owed"/>
-                                </segments>
-                                <connections>
-                                    <action selector="segmentedControlValueChanged:" destination="Mdk-HO-Xy6" eventType="valueChanged" id="GFa-1V-8sh"/>
-                                </connections>
-                            </segmentedControl>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ePv-ld-Wvr">
-                                <rect key="frame" x="72.5" y="102" width="175" height="10"/>
+                                <rect key="frame" x="72.5" y="98" width="175" height="10"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="175" id="MrJ-ge-pia"/>
                                     <constraint firstAttribute="height" constant="10" id="uTu-z3-Ets"/>
@@ -225,6 +215,20 @@
                                     <segue destination="1qM-vk-mN0" kind="show" id="oQd-0o-U9a"/>
                                 </connections>
                             </button>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="MLi-yW-IM6">
+                                <rect key="frame" x="86.5" y="128" width="147" height="29"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="147" id="gnQ-C3-Mma"/>
+                                    <constraint firstAttribute="height" constant="28" id="hDK-pM-iDK"/>
+                                </constraints>
+                                <segments>
+                                    <segment title="Owe"/>
+                                    <segment title="Owed"/>
+                                </segments>
+                                <connections>
+                                    <action selector="segmentedControlValueChanged:" destination="Mdk-HO-Xy6" eventType="valueChanged" id="GFa-1V-8sh"/>
+                                </connections>
+                            </segmentedControl>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -451,7 +455,7 @@
             </objects>
             <point key="canvasLocation" x="1871.25" y="272.53521126760563"/>
         </scene>
-        <!--Choose split options-->
+        <!--Split Options-->
         <scene sceneID="FlA-qL-OQ1">
             <objects>
                 <viewController id="nPl-Ns-5Ad" customClass="SplitExpensesViewController" customModule="Roomie" customModuleProvider="target" sceneMemberID="viewController">
@@ -550,7 +554,7 @@
                             <constraint firstItem="Gw7-hM-00E" firstAttribute="top" secondItem="HMI-WX-IcT" secondAttribute="bottom" constant="8" id="dvb-WJ-9Uc"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Choose split options" id="t3i-Am-iab">
+                    <navigationItem key="navigationItem" title="Split Options" largeTitleDisplayMode="never" id="t3i-Am-iab">
                         <barButtonItem key="rightBarButtonItem" systemItem="save" id="O9Q-7e-G9a">
                             <connections>
                                 <action selector="saveButtonTapped:" destination="nPl-Ns-5Ad" id="els-m1-XEE"/>
@@ -580,7 +584,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="LW6-Ma-kYc">
-                                <rect key="frame" x="48.5" y="78" width="223" height="29"/>
+                                <rect key="frame" x="48.5" y="74" width="223" height="29"/>
                                 <segments>
                                     <segment title="You Paid"/>
                                     <segment title="Others Paid You"/>
@@ -590,7 +594,7 @@
                                 </connections>
                             </segmentedControl>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="qfd-iM-xwH">
-                                <rect key="frame" x="0.0" y="128" width="320" height="391"/>
+                                <rect key="frame" x="0.0" y="124" width="320" height="395"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="youPaidCell" rowHeight="71" id="oNn-lq-Rh0" customClass="PaidOthersTableViewCell" customModule="Roomie" customModuleProvider="target">
@@ -794,7 +798,7 @@
                     <tabBarItem key="tabBarItem" title="Expenses" id="A98-Oh-UQ5"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="WRZ-79-Hlg">
-                        <rect key="frame" x="0.0" y="20" width="320" height="48"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
